убрал код для гита в отдельную форму

--- a/firmware/Camera/Neural Networks/Oleg.ipynb
+++ b/firmware/Camera/Neural Networks/Oleg.ipynb
@@ -2,6 +2,63 @@
   "cells": [
     {
       "cell_type": "code",
+      "source": [
+        "#@title Попытки с гитом\n",
+        "!git clone https://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@github.com/frznmn/RCJ_239_OnStage_Smile.git\n",
+        "\n",
+        "!git config --global user.email \"oleg.drokanov@yandex.ru\"\n",
+        "!git config --global user.name \"olegg366\"\n",
+        "\n",
+        "!curl -s https://packagecloud.io/install/repositories/github/git-lfs/script.deb.sh | sudo bash\n",
+        "!sudo apt-get install git-lfs=2.13.3\n",
+        "\n",
+        "%cd \"./RCJ_239_OnStage_Smile\"\n",
+        "\n",
+        "!git lfs install\n",
+        "\n",
+        "!git lfs track \"*.npy\"\n",
+        "!git lfs track \"*.ipynb\"\n",
+        "\n",
+        "X_all=np.load('/content/drive/MyDrive/Colab Notebooks/X.npy')\n",
+        "Y_all=np.load('/content/drive/MyDrive/Colab Notebooks/Y.npy')\n",
+        "bg=np.load('/content/drive/MyDrive/Colab Notebooks/bg.npy')\n",
+        "tbg=np.load('/content/drive/MyDrive/Colab Notebooks/tbg.npy')\n",
+        "rooms=np.load('/content/drive/MyDrive/Colab Notebooks/rooms.npy')\n",
+        "\n",
+        "np.save('./firmware/Camera/Neural_Networks/X.npy',X_all)\n",
+        "np.save('./firmware/Camera/Neural_Networks/Y.npy',Y_all)\n",
+        "np.save('./firmware/Camera/Neural_Networks/bg.npy',bg)\n",
+        "np.save('./firmware/Camera/Neural_Networks/tbg.npy',tbg)\n",
+        "np.save('./firmware/Camera/Neural_Networks/rooms.npy',rooms)\n",
+        "\n",
+        "!git add \"./firmware/Camera/Neural Networks/X.npy\" \n",
+        "!git add \"./firmware/Camera/Neural Networks/Y.npy\"\n",
+        "!git add \"./firmware/Camera/Neural Networks/bg.npy\" \n",
+        "!git add \"./firmware/Camera/Neural Networks/tbg.npy\" \n",
+        "!git add \"./firmware/Camera/Neural Networks/rooms.npy\" \n",
+        "\n",
+        "!git status\n",
+        "\n",
+        "!git add firmware/Camera/Neural_Networks/bg.npy\n",
+        "\n",
+        "!git commit \"./firmware/Camera/Neural Networks/X.npy\" -m \"изменил поврежденные файлы для нейронки\"\n",
+        "!git commit \"./firmware/Camera/Neural Networks/Y.npy\" -m \"изменил поврежденные файлы для нейронки\"\n",
+        "!git commit \"./firmware/Camera/Neural Networks/bg.npy\" -m \"изменил поврежденные файлы для нейронки\"\n",
+        "!git commit \"./firmware/Camera/Neural Networks/tbg.npy\" -m \"изменил поврежденные файлы для нейронки\"\n",
+        "!git commit \"./firmware/Camera/Neural Networks/rooms.npy\" -m \"изменил поврежденные файлы для нейронки\"\n",
+        "\n",
+        "!git push"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "IuPtxhi-FXj5"
+      },
+      "id": "IuPtxhi-FXj5",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": 1,
       "id": "cfb138b5",
       "metadata": {
@@ -56,371 +113,18 @@
     {
       "cell_type": "code",
       "source": [
-        "!git clone https://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@github.com/frznmn/RCJ_239_OnStage_Smile.git"
-      ],
-      "metadata": {
-        "id": "IuPtxhi-FXj5",
-        "outputId": "b8c7be7b-8c46-4d41-e2f7-91c0e1df3941",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "IuPtxhi-FXj5",
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Cloning into 'RCJ_239_OnStage_Smile'...\n",
-            "remote: Enumerating objects: 1205, done.\u001b[K\n",
-            "remote: Counting objects: 100% (537/537), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (462/462), done.\u001b[K\n",
-            "remote: Total 1205 (delta 71), reused 490 (delta 52), pack-reused 668\u001b[K\n",
-            "Receiving objects: 100% (1205/1205), 197.97 MiB | 14.76 MiB/s, done.\n",
-            "Resolving deltas: 100% (282/282), done.\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!git config --global user.email \"oleg.drokanov@yandex.ru\"\n",
-        "!git config --global user.name \"olegg366\""
-      ],
-      "metadata": {
-        "id": "_UYN1IvwIV-e"
-      },
-      "id": "_UYN1IvwIV-e",
-      "execution_count": 4,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!curl -s https://packagecloud.io/install/repositories/github/git-lfs/script.deb.sh | sudo bash\n",
-        "!sudo apt-get install git-lfs=2.13.3"
-      ],
-      "metadata": {
-        "id": "JmpfswAqGPDo",
-        "outputId": "83c6d11b-0ac0-46a8-984e-389742b47804",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "JmpfswAqGPDo",
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Detected operating system as Ubuntu/focal.\n",
-            "Checking for curl...\n",
-            "Detected curl...\n",
-            "Checking for gpg...\n",
-            "Detected gpg...\n",
-            "Detected apt version as 2.0.9\n",
-            "Running apt-get update... done.\n",
-            "Installing apt-transport-https... done.\n",
-            "Installing /etc/apt/sources.list.d/github_git-lfs.list...done.\n",
-            "Importing packagecloud gpg key... Packagecloud gpg key imported to /etc/apt/keyrings/github_git-lfs-archive-keyring.gpg\n",
-            "done.\n",
-            "Running apt-get update... done.\n",
-            "\n",
-            "The repository is setup! You can now install packages.\n",
-            "Reading package lists... Done\n",
-            "Building dependency tree       \n",
-            "Reading state information... Done\n",
-            "The following packages will be upgraded:\n",
-            "  git-lfs\n",
-            "1 upgraded, 0 newly installed, 0 to remove and 26 not upgraded.\n",
-            "Need to get 6,231 kB of archives.\n",
-            "After this operation, 3,412 kB of additional disk space will be used.\n",
-            "Get:1 https://packagecloud.io/github/git-lfs/ubuntu focal/main amd64 git-lfs amd64 2.13.3 [6,231 kB]\n",
-            "Fetched 6,231 kB in 0s (19.5 MB/s)\n",
-            "debconf: unable to initialize frontend: Dialog\n",
-            "debconf: (No usable dialog-like program is installed, so the dialog based frontend cannot be used. at /usr/share/perl5/Debconf/FrontEnd/Dialog.pm line 76, <> line 1.)\n",
-            "debconf: falling back to frontend: Readline\n",
-            "debconf: unable to initialize frontend: Readline\n",
-            "debconf: (This frontend requires a controlling tty.)\n",
-            "debconf: falling back to frontend: Teletype\n",
-            "dpkg-preconfigure: unable to re-open stdin: \n",
-            "(Reading database ... 122356 files and directories currently installed.)\n",
-            "Preparing to unpack .../git-lfs_2.13.3_amd64.deb ...\n",
-            "Unpacking git-lfs (2.13.3) over (2.9.2-1) ...\n",
-            "Setting up git-lfs (2.13.3) ...\n",
-            "Git LFS initialized.\n",
-            "Processing triggers for man-db (2.9.1-1) ...\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "%cd \"./RCJ_239_OnStage_Smile\""
-      ],
-      "metadata": {
-        "id": "sz1slcmOGfSf",
-        "outputId": "a29038d0-b9e3-41df-c925-ec955c704e7b",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "sz1slcmOGfSf",
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/content/RCJ_239_OnStage_Smile\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!git lfs install"
-      ],
-      "metadata": {
-        "id": "RA77G1H1eek9",
-        "outputId": "1a745d3c-713c-4e62-a32b-9be64e9d408f",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "RA77G1H1eek9",
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Updated git hooks.\n",
-            "Git LFS initialized.\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!git lfs track \"*.npy\"\n",
-        "!git lfs track \"*.ipynb\""
-      ],
-      "metadata": {
-        "id": "n9HZcZNHJQMV",
-        "outputId": "2a9c7a84-0fef-47f4-ccb3-daf4056914f6",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "n9HZcZNHJQMV",
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Tracking \"*.npy\"\n",
-            "Tracking \"*.ipynb\"\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 9,
-      "id": "eee01c33",
-      "metadata": {
-        "id": "eee01c33"
-      },
-      "outputs": [],
-      "source": [
         "X_all=np.load('/content/drive/MyDrive/Colab Notebooks/X.npy')\n",
         "Y_all=np.load('/content/drive/MyDrive/Colab Notebooks/Y.npy')\n",
         "bg=np.load('/content/drive/MyDrive/Colab Notebooks/bg.npy')\n",
         "tbg=np.load('/content/drive/MyDrive/Colab Notebooks/tbg.npy')\n",
         "rooms=np.load('/content/drive/MyDrive/Colab Notebooks/rooms.npy')"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "np.save('./firmware/Camera/Neural_Networks/X.npy',X_all)\n",
-        "np.save('./firmware/Camera/Neural_Networks/Y.npy',Y_all)\n",
-        "np.save('./firmware/Camera/Neural_Networks/bg.npy',bg)\n",
-        "np.save('./firmware/Camera/Neural_Networks/tbg.npy',tbg)\n",
-        "np.save('./firmware/Camera/Neural_Networks/rooms.npy',rooms)"
       ],
       "metadata": {
-        "id": "1fj4yMuPGwz3"
+        "id": "qLAXs444jxnb"
       },
-      "id": "1fj4yMuPGwz3",
-      "execution_count": 11,
+      "id": "qLAXs444jxnb",
+      "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!git add \"./firmware/Camera/Neural Networks/X.npy\" \n",
-        "!git add \"./firmware/Camera/Neural Networks/Y.npy\"\n",
-        "!git add \"./firmware/Camera/Neural Networks/bg.npy\" \n",
-        "!git add \"./firmware/Camera/Neural Networks/tbg.npy\" \n",
-        "!git add \"./firmware/Camera/Neural Networks/rooms.npy\" "
-      ],
-      "metadata": {
-        "id": "55S2rlJacbna"
-      },
-      "id": "55S2rlJacbna",
-      "execution_count": 13,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!git status"
-      ],
-      "metadata": {
-        "id": "EMVZU8vHf3Io",
-        "outputId": "7ed318f1-e2d9-4e0c-d4a6-a1e87e9911e4",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "EMVZU8vHf3Io",
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "On branch main\n",
-            "Your branch is up to date with 'origin/main'.\n",
-            "\n",
-            "Changes not staged for commit:\n",
-            "  (use \"git add <file>...\" to update what will be committed)\n",
-            "  (use \"git restore <file>...\" to discard changes in working directory)\n",
-            "\t\u001b[31mmodified:   firmware/Camera/Neural_Networks/X.npy\u001b[m\n",
-            "\t\u001b[31mmodified:   firmware/Camera/Neural_Networks/bg.npy\u001b[m\n",
-            "\t\u001b[31mmodified:   firmware/Camera/Neural_Networks/rooms.npy\u001b[m\n",
-            "\t\u001b[31mmodified:   firmware/Camera/Neural_Networks/tbg.npy\u001b[m\n",
-            "\n",
-            "Untracked files:\n",
-            "  (use \"git add <file>...\" to include in what will be committed)\n",
-            "\t\u001b[31m.gitattributes\u001b[m\n",
-            "\n",
-            "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!git add firmware/Camera/Neural_Networks/Y.npy"
-      ],
-      "metadata": {
-        "id": "JN7ZTGr7gqi7"
-      },
-      "id": "JN7ZTGr7gqi7",
-      "execution_count": 13,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!git commit \"./firmware/Camera/Neural Networks/X.npy\" -m \"изменил поврежденные файлы для нейронки\"\n",
-        "!git commit \"./firmware/Camera/Neural Networks/Y.npy\" -m \"изменил поврежденные файлы для нейронки\"\n",
-        "!git commit \"./firmware/Camera/Neural Networks/bg.npy\" -m \"изменил поврежденные файлы для нейронки\"\n",
-        "!git commit \"./firmware/Camera/Neural Networks/tbg.npy\" -m \"изменил поврежденные файлы для нейронки\"\n",
-        "!git commit \"./firmware/Camera/Neural Networks/rooms.npy\" -m \"изменил поврежденные файлы для нейронки\""
-      ],
-      "metadata": {
-        "id": "bUKaDMvWH8WP",
-        "outputId": "188d02c2-6c0d-4adb-99d1-66259bd73e4e",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "bUKaDMvWH8WP",
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "On branch main\n",
-            "Your branch is up to date with 'origin/main'.\n",
-            "\n",
-            "Untracked files:\n",
-            "  (use \"git add <file>...\" to include in what will be committed)\n",
-            "\t\u001b[31m.gitattributes\u001b[m\n",
-            "\n",
-            "nothing added to commit but untracked files present (use \"git add\" to track)\n",
-            "On branch main\n",
-            "Your branch is up to date with 'origin/main'.\n",
-            "\n",
-            "Untracked files:\n",
-            "  (use \"git add <file>...\" to include in what will be committed)\n",
-            "\t\u001b[31m.gitattributes\u001b[m\n",
-            "\n",
-            "nothing added to commit but untracked files present (use \"git add\" to track)\n",
-            "On branch main\n",
-            "Your branch is up to date with 'origin/main'.\n",
-            "\n",
-            "Untracked files:\n",
-            "  (use \"git add <file>...\" to include in what will be committed)\n",
-            "\t\u001b[31m.gitattributes\u001b[m\n",
-            "\n",
-            "nothing added to commit but untracked files present (use \"git add\" to track)\n",
-            "On branch main\n",
-            "Your branch is up to date with 'origin/main'.\n",
-            "\n",
-            "Untracked files:\n",
-            "  (use \"git add <file>...\" to include in what will be committed)\n",
-            "\t\u001b[31m.gitattributes\u001b[m\n",
-            "\n",
-            "nothing added to commit but untracked files present (use \"git add\" to track)\n",
-            "On branch main\n",
-            "Your branch is up to date with 'origin/main'.\n",
-            "\n",
-            "Untracked files:\n",
-            "  (use \"git add <file>...\" to include in what will be committed)\n",
-            "\t\u001b[31m.gitattributes\u001b[m\n",
-            "\n",
-            "nothing added to commit but untracked files present (use \"git add\" to track)\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!git push"
-      ],
-      "metadata": {
-        "id": "J_fzLOTSI5eO",
-        "outputId": "290b39a8-c7b3-48ed-dcda-0e749bd82dd8",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "J_fzLOTSI5eO",
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Everything up-to-date\n"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "code",
